force-app/main/default/objects/IMIT_Payment__c/IMIT_Payment__c.object-meta.xml
<CustomObject>
    <description>This object will be used to capture more than one payment details applicable to IMIT Grant Financial Incentive.</description>
    <label>IMIT Payment</label>
    <nameField>
        <displayFormat>IMIPAY-{000000}</displayFormat>
        <label>IMIT Payment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMIT Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>