force-app/main/default/objects/IMIT_Payment__c/fields/Actual_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Paid_Amount__c</fullName>
    <description>Actual amount paid after any adjustments, if required</description>
    <inlineHelpText>Actual amount paid after any adjustments, if required</inlineHelpText>
    <label>Actual Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>