force-app/main/default/objects/IMIT_Payment__c/fields/Adjustment_Details__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Details__c</fullName>
    <description>Need to specify details for Other Reason for Adjustment</description>
    <inlineHelpText>Need to specify details for Other Reason for Adjustment</inlineHelpText>
    <label>Adjustment Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>