force-app/main/default/objects/IMIT_Payment__c/fields/Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Base_Year__c</fullName>
    <description>Taxation year in which a Financial Incentive Agreement is signed for the Property upon which the Eligible Development is to be constructed</description>
    <formula>Financial_Incentive__r.Base_Year__c</formula>
    <inlineHelpText>Taxation year in which a Financial Incentive Agreement is signed for the Property upon which the Eligible Development is to be constructed</inlineHelpText>
    <label>Base Year</label>
    <type>Text</type>
</CustomField>