force-app/main/default/objects/IMIT_Payment__c/fields/Default_Reason__c.field-meta.xml
<CustomField>
    <fullName>Default_Reason__c</fullName>
    <description>Explain the reason for default, circumstances and how default is being processed</description>
    <inlineHelpText>Explain the reason for default, circumstances and how default is being processed</inlineHelpText>
    <label>Default Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>