force-app/main/default/objects/IMIT_Payment__c/fields/Destination_Year__c.field-meta.xml
<CustomField>
    <fullName>Destination_Year__c</fullName>
    <description>The first full taxation year following the completion and reassessment of the Eligible Development</description>
    <formula>Financial_Incentive__r.Destination_Year__c</formula>
    <inlineHelpText>The first full taxation year following the completion and reassessment of the Eligible Development</inlineHelpText>
    <label>Destination Year</label>
    <type>Text</type>
</CustomField>