force-app/main/default/objects/IMIT_Payment__c/fields/Destination_Year_Tax_amount__c.field-meta.xml
<CustomField>
    <fullName>Destination_Year_Tax_amount__c</fullName>
    <description>assessment roll applicable to the first full taxation year following the completion and reassessment of the Eligible Development, by the municipal tax rate(s) applicable to the Property and the Eligible Development at that time. The Destination Municipal CVA Taxes shall remain fixed for the purposes of determining the Municipal Tax Increment for the Eligible Development subject to any adjustments to taxes arising from assessment appeals or changes to the Destination Municipal CVA made by MPAC through requests for reconsideration, equity changes or gross error, and shall remain unchanged for the duration of the term of the payment of Development Grants for the Eligible Development.</description>
    <formula>Financial_Incentive__r.Destination_Year_Tax_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount calculated by multiplying the CVA&#39;s directly attributable to the Eligible Development as reflected in the returned assessment roll applicable to the first full taxation year following the completion and reassessment of the Eligible Development</inlineHelpText>
    <label>Destination Year Tax amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>