force-app/main/default/objects/IMIT_Payment__c/fields/Financial_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Financial_Incentive__c</fullName>
    <label>Financial Incentive</label>
    <referenceTo>Financial_Incentive__c</referenceTo>
    <relationshipLabel>IMIT Payments</relationshipLabel>
    <relationshipName>IMIT_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>