force-app/main/default/objects/IMIT_Payment__c/fields/Gross_Floor_Area_GFA__c.field-meta.xml
<CustomField>
    <fullName>Gross_Floor_Area_GFA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gross Floor Area (GFA)</label>
    <type>Checkbox</type>
</CustomField>