force-app/main/default/objects/IMIT_Payment__c/fields/Has_file_previously_been_in_default__c.field-meta.xml
<CustomField>
    <fullName>Has_file_previously_been_in_default__c</fullName>
    <label>Has file previously been in default?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>