force-app/main/default/objects/IMIT_Payment__c/fields/Is_this_currently_in_default__c.field-meta.xml
<CustomField>
    <fullName>Is_this_currently_in_default__c</fullName>
    <label>Is this currently in default?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>