force-app/main/default/objects/IMIT_Payment__c/fields/Is_this_Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_this_Final_Payment__c</fullName>
    <description>Please choose &#39;Yes&#39; if its a Final Payment for IMIT application and &#39;No&#39; for Scheduled Payment</description>
    <inlineHelpText>Please choose &#39;Yes&#39; if its a Final Payment for IMIT application and &#39;No&#39; for Scheduled Payment</inlineHelpText>
    <label>Is this Final Payment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>