force-app/main/default/objects/IMIT_Payment__c/fields/No_Assessment_Appeals_Made__c.field-meta.xml
<CustomField>
    <fullName>No_Assessment_Appeals_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual compliance check through Municipal Licencing and Standards and Toronto Building to ensure there are no outstanding work orders, violations and/or requests to comply from any municipal or provincial entity</description>
    <inlineHelpText>No outstanding work orders and/or orders or requests to comply  from any municipal or provincial entity (attach confirmation)&quot;</inlineHelpText>
    <label>No Assessment Appeals Made</label>
    <type>Checkbox</type>
</CustomField>