force-app/main/default/objects/IMIT_Payment__c/fields/No_Outstanding_Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>No_Outstanding_Property_Taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual compliance check by Revenue Services to confirm there are no outstanding taxes, water rates, or other sums owed to the City with respect to the property.</description>
    <inlineHelpText>Annual compliance check by Revenue Services to confirm there are no outstanding taxes, water rates, or other sums owed to the City with respect to the property.(attach Tax/Utility Certificates)</inlineHelpText>
    <label>No Outstanding Property Taxes</label>
    <type>Checkbox</type>
</CustomField>