force-app/main/default/objects/IMIT_Payment__c/fields/No_Outstanding_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>No_Outstanding_Work_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual compliance check through Municipal Licencing and Standards and Toronto Building to ensure there are no outstanding work orders, violations and/or requests to comply from any municipal or provincial entity</description>
    <inlineHelpText>Annual compliance check through Municipal Licencing and Standards and Toronto Building to ensure there are no outstanding work orders, violations and/or requests to comply from any municipal or provincial entity</inlineHelpText>
    <label>No Outstanding Work Orders</label>
    <type>Checkbox</type>
</CustomField>