force-app/main/default/objects/IMIT_Payment__c/fields/Owners_Statutory_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Owners_Statutory_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owners Statutory Declaration</label>
    <type>Checkbox</type>
</CustomField>