force-app/main/default/objects/IMIT_Payment__c/fields/Payment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fees__c</fullName>
    <label>Payment Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>