force-app/main/default/objects/IMIT_Payment__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <label>Payment Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>