force-app/main/default/objects/IMIT_Payment__c/fields/Reason_for_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Adjustment__c</fullName>
    <description>Reasons may include: Rebates, prior year over payment or reduction in eligible Gross Floor Area</description>
    <inlineHelpText>Reasons may include: Rebates, prior year over payment or reduction in eligible Gross Floor Area</inlineHelpText>
    <label>Reason for Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacancy</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Change in eligible GFA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>