force-app/main/default/objects/IMIT_Payment__c/fields/Rebate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grant amounts will be adjusted to reflect the amount of any rebate of municipal taxes paid to the property owner, including rebates to reflect vacancy, charitable status, heritage status, etc. Adjustments and final payments amounts should be provided by Revenue Services.</description>
    <inlineHelpText>Grant amounts will be adjusted to reflect amount of any rebate of municipal taxes paid to the property owner, including rebates to reflect vacancy, charitable status, heritage status etc.Adjustments and final payments amounts  provided by Revenue Services</inlineHelpText>
    <label>Rebate Adjustment</label>
    <type>Checkbox</type>
</CustomField>