force-app/main/default/objects/IMIT_Payment__c/fields/Scheduled_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Amount__c</fullName>
    <description>Scheduled payment amounts per the Schedule F within the Amending Agreement</description>
    <inlineHelpText>Scheduled payment amounts per the Schedule F within the Amending Agreement</inlineHelpText>
    <label>Scheduled Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>