force-app/main/default/objects/IMIT_Payment__c/fields/Scheduled_Payment_Year__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Year__c</fullName>
    <description>The tax year for which the payments are to be made</description>
    <inlineHelpText>The tax year for which the payments are to be made</inlineHelpText>
    <label>Scheduled Payment Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>