force-app/main/default/objects/IMIT_Payment__c/fields/Second_Approver_Reviewed_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver_Reviewed_Checklist__c</fullName>
    <description>Approver can select the list of received documents to approve after reviewing</description>
    <inlineHelpText>Approver can select the list of received documents to approve after reviewing</inlineHelpText>
    <label>Second Approver Reviewed Checklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Incentive Agreement Schedule F</fullName>
            </value>
            <value>
                <fullName>Signed FIA Amending Agreement Schedule F</fullName>
            </value>
            <value>
                <fullName>Gross Floor Area (GFA)</fullName>
            </value>
            <value>
                <fullName>Owners Statutory Declaration</fullName>
            </value>
            <value>
                <fullName>No Outstanding Property Taxes</fullName>
            </value>
            <value>
                <fullName>No Outstanding Work Orders</fullName>
            </value>
            <value>
                <fullName>No Assessment Appeals Made</fullName>
            </value>
            <value>
                <fullName>Continued Eligible Use (attach memo)</fullName>
            </value>
            <value>
                <fullName>Rebate Adjustment</fullName>
            </value>
            <value>
                <fullName>Brownfield Remediation</fullName>
            </value>
            <value>
                <fullName>Satisfactory Participation in Local Empl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>