force-app/main/default/objects/IMIT_Payment__c/fields/Signed_FIA_Amending_Agreement_Schedule_F__c.field-meta.xml
<CustomField>
    <fullName>Signed_FIA_Amending_Agreement_Schedule_F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed FIA Amending Agreement Schedule F</label>
    <type>Checkbox</type>
</CustomField>