force-app/main/default/objects/IMIT_Payment__c/fields/Tax_Increment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Increment__c</fullName>
    <description>Tax increment amount expressed as a percentage</description>
    <inlineHelpText>Tax increment amount expressed as a percentage</inlineHelpText>
    <label>Tax Increment %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>