force-app/main/default/objects/IMIT_Payment__c/fields/Tax_Increment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Increment_Amount__c</fullName>
    <description>Difference between Base yr tax amount and the destination Year tax amount</description>
    <formula>Destination_Year_Tax_amount__c-Base_Year_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between Base yr tax amount and the destination Year tax amount</inlineHelpText>
    <label>Tax Increment Amount $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>