force-app/main/default/objects/IMIT_Payment__c/validationRules/Validation_For_Default_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_For_Default_Reason</fullName>
    <active>true</active>
    <description>This validation rule is to make sure user should provide value in Default Reason field if Is this currently in default? is Yes</description>
    <errorConditionFormula>AND(ISBLANK(Default_Reason__c), TEXT(Is_this_currently_in_default__c)=&#39;Yes&#39;)</errorConditionFormula>
    <errorDisplayField>Default_Reason__c</errorDisplayField>
    <errorMessage>Default Reason should be provided.</errorMessage>
</ValidationRule>